fix header spacing issue for mobile

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -12,12 +12,11 @@
     list-style: none;
     justify-content: flex-start;
     padding-left: 15px;
-    font-size: 13px;
+    font-size: 12px;
   }
 
   .about {
-    margin-right: 10px;
-    width: 10%;
+    width: 13%;
   }
 
   & a {
